# simon_sdk

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_agent.py  builtin_tools_agent.py  chat_tui.py  hooks_agent.py  knowledge_agent.py  mcp_agent.py  memory_agent.py  parallel_agents.py  persistent_memory_agent.py  planner_agent.py  structured_output_agent.py  tools_agent.py  triage_agent.py
simon/: __init__.py  cli.py  exceptions.py  reliability.py  tui.py
simon/agent/: __init__.py  agent.py  events.py  response.py  structured.py
simon/config/: __init__.py  settings.py
simon/knowledge/: __init__.py  embeddings.py  knowledge.py  retrieval.py
simon/memory/: __init__.py  base.py  inmemory.py  jsonfile.py
simon/models/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
simon/multi/: __init__.py  agent_group.py  triage.py
simon/planner/: __init__.py  planner.py
simon/router/: __init__.py  router.py
simon/tools/: __init__.py  mcp_client.py  registry.py  tool.py
simon/tools/builtin/: __init__.py  filesystem.py  mcp_example_server.py  shell.py  utils.py  web.py
tests/: test_agent.py  test_builtin_tools.py  test_exceptions.py  test_hooks.py  test_knowledge.py  test_knowledge_dirs.py  test_memory.py  test_memory_jsonfile.py  test_models.py  test_multi.py  test_planner.py  test_react.py  test_reliability.py  test_structured_output.py  test_tools.py
